<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SP_application</string>
    <string name="menu_settings">Settings</string>
    <string name="goto_userInfo">Представиться</string>
    <string name="goto_tasks">К заданиям</string>
    <string name="sp_logo">Main logo of SP</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_tasks_list__geo">TasksList_GEO</string>
    <string name="title_activity_task_project">TaskProjectActivity</string>
    <string name="LorenIpsum">\"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="T_P_Map_point">2. Сориентируйтесь по карте</string>
    <string name="selectTime">Выберите время</string>
    <string name="title_activity_task_process">TaskProcess</string>
    <string name="task_project_image_decription">Image in task/project desription</string>
    <string name="select_time_attention">Здесь будет предупреждение о выбирании времени и необходимости быть на месте в заданное время</string>
    <string name="Accept">Сделаем</string>
    <string name="Execute">К выполнению</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_loading">Loading</string>
    <string name="next">Далее</string>
    <string name="T_P_descr_point">1. Прочитайте описание</string>
    <string name="fish_map_description">Посмотрите на карту, на ней обозначено &lt;имя области>. Именно в здесь необходимо провести исследование.</string>
    <string name="T_P_time_choise_point">3. Выберите удобное время</string>
    <string name="hello_world">Hello world!</string>

</resources>